--- a/osu.Framework/osu.Framework.csproj
+++ b/osu.Framework/osu.Framework.csproj
@@ -42,6 +42,7 @@
     <PackageReference Include="ppy.SDL2-CS" Version="1.0.741-alpha" />
     <PackageReference Include="ppy.SDL3-CS" Version="2024.528.0" />
     <PackageReference Include="ppy.osu.Framework.SourceGeneration" Version="2023.720.0" />
+    <PackageReference Include="X11" Version="1.0.6" />
 
     <!-- DO NOT use ProjectReference for native packaging project.
          See https://github.com/NuGet/Home/issues/4514 and https://github.com/dotnet/sdk/issues/765 . -->
